style: add scrollbar-y  to prevent layout change

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 @layer base {
+  html {
+    @apply overflow-y-scroll;
+  }
   body {
     @apply font-mainFont;
   }
